--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-223.5KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-327.7KB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-596.6KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇺🇸 美国-8.08MB/s(Youtube:不良林), server: transit1.fanqiang.eu, port: 15004, type: trojan, password: 7259391b-9f01-4ede-90dc-3955cf1c4998, sni: transit1.fanqiang.eu, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.56MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 未知国家-1.48MB/s(Youtube:不良林), server: 193.178.210.29, port: 443, type: trojan, password: iKR3Ft, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-270.6KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20747, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-718.4KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20736, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.42MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-955.0KB/s(Youtube:不良林), server: 116.129.254.212, port: 48616, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
-  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 212.81.47.18, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-971.6KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-355.3KB/s(Youtube:不良林), server: 167.88.61.2, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-201.6KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20746, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-506.7KB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇭🇰 香港-285.4KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-202.6KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20722, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-730.7KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20739, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-441.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20747, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-971.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-202.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-971.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-202.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-971.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-202.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-202.6KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-971.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-202.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-971.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-202.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-971.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-202.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-223.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-327.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-596.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-8.08MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.56MB/s(Youtube:不良林)
-      - 未知国家-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-270.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-718.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-955.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-971.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-355.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-201.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-506.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-285.4KB/s(Youtube:不良林)
+      - 🇭🇰 香港-202.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-441.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
