--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-233.2KB/s(Youtube:不良林), server: app.ssfree.ru, port: 443, type: vmess, uuid: 773c2bba-eb96-11ec-8260-000017022008, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /getweather, ws-headers: {Host: app.ssfree.ru}}
-  - {name: 🇩🇪 德国-250.4KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.10MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇺🇸 美国-292.6KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20731, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-343.3KB/s(Youtube:不良林), server: AZQT001.xiba1.xyz, port: 20733, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZQT001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-452.0KB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-776.8KB/s(Youtube:不良林), server: 167.88.61.2, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-331.0KB/s(Youtube:不良林), server: in-sg-1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-sg-1.onebox6.org}}
-  - {name: 🇭🇰 香港-266.0KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20726, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: rn.uuuuuu.eu, port: 443, type: trojan, password: !<str> 888888, sni: rn.uuuuuu.eu, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-966.2KB/s(Youtube:不良林), server: 51.210.51.88, port: 443, type: ssr, cipher: aes-192-ctr, password: sEscPBiAD9K$&@79, protocol: auth_chain_a, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇭🇰 香港-467.3KB/s(Youtube:不良林), server: AZHJ001.xiba1.xyz, port: 20721, type: trojan, password: 93768960-75fc-34e5-8025-7ff0cc5a0aa6, sni: AZHJ001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-333.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-452.0KB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1c08f35bdafe74a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-3.20MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.78MB/s(Youtube:不良林), server: cu-cs.okvpn.xyz, port: 20003, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cu-cs.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.28MB/s(Youtube:不良林), server: 116.129.254.212, port: 48606, type: ssr, cipher: aes-256-cfb, password: GjRQkK, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 1062:tLkKEk, obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-292.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-266.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-966.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-292.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-266.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-966.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-292.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-266.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-966.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-266.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-292.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-266.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-966.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-292.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-266.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-966.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-292.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-266.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-966.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-233.2KB/s(Youtube:不良林)
-      - 🇩🇪 德国-250.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.10MB/s(Youtube:不良林)
-      - 🇺🇸 美国-292.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-343.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-776.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-331.0KB/s(Youtube:不良林)
-      - 🇭🇰 香港-266.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
-      - 🇫🇷 法国-966.2KB/s(Youtube:不良林)
+      - 🇭🇰 香港-467.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-333.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-452.0KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-954.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-667.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.78MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.28MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
